# SpectreNet

./: .gitignore  LICENSE  Metasploit_2.0_Architecture.docx  README.md  pyproject.toml
gui/: README.md
gui/src/: index.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
notebooks/: spectrenet_finetune.ipynb
scripts/: evaluate_spectre.py  train_spectre.py
spectrenet/: __init__.py  cli.py  config.py  logging_setup.py  loot.py  scope.py  theme.py  tools_installer.py  workspace.py
spectrenet/ai/: goal_engine.py  mission_planner.py  output_interpreter.py  report_writer.py  step_reasoner.py
spectrenet/engines/: crawler.py  exploit.py  fuzzer.py  post_ex.py  recon.py  web_vuln.py
spectrenet/knowledge/: cve_db.py  cve_enricher.py  exploit_map.py  exploit_map_schema.sql  schema.sql  vector_store.py
spectrenet/model/: anthropic_backend.py  groq_backend.py  interface.py  local_backend.py  ollama_backend.py  openai_backend.py  openrouter_backend.py  spectre_backend.py
spectrenet/models/: downloader.py  manager.py  registry.py
spectrenet/msf/: bridge.py  console.py  session_interactor.py
spectrenet/server/: app.py
spectrenet/storage/: pg_session.py  schema.sql  session.py
spectrenet/training/: data_extractor.py  dataset_builder.py  eval.py  seed_data.py  trainer.py
spectrenet/tui/: ai_screen.py  app.py  approval_gate.py  cheat_sheets.py  classic_screen.py  command_parser.py  findings_panel.py  goal_panel.py  (+7 more)
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_anthropic_backend.py  test_approval_gate.py  test_command_parser.py  test_config.py  test_crackmapexec_wrapper.py  test_cve_db.py  test_cve_enricher.py  test_enum4linux_wrapper.py  test_exploit_engine.py  test_exploit_map.py  test_exploit_module_registry.py  test_goal_engine.py  test_loot.py  test_masscan_wrapper.py  test_mission_planner.py  test_model_interface.py  test_msf_bridge.py  test_msf_console.py  test_msfvenom_wrapper.py  test_nikto_wrapper.py  test_nmap_wrapper.py  test_nuclei_wrapper.py  test_ollama_backend.py  test_openai_backend.py  test_output_interpreter.py  test_pg_session.py  test_post_ex.py  test_recon_engine.py  test_report_exporter.py  test_report_html.py  test_report_writer.py  test_scope.py  test_searchsploit_wrapper.py  test_session_interactor.py  test_session_store.py  test_shodan_wrapper.py  test_sqlmap_wrapper.py  test_step_reasoner.py  test_subfinder_wrapper.py  (+4 more)
(+31 files in other folders)
