[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrenet"
version = "0.1.0"
description = "SpectreNet — AI-assisted offensive security framework. Always one step ahead."
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev      = ["pytest>=8.0", "pytest-cov>=4.1", "pytest-asyncio>=0.23"]
msf      = ["pymetasploit3>=1.0"]
server   = ["fastapi>=0.110", "uvicorn>=0.29"]
ai       = ["anthropic>=0.25", "groq>=0.9"]
vector   = ["chromadb>=0.5"]
training = ["transformers>=4.40", "peft>=0.10", "datasets>=2.19", "torch>=2.2"]
all      = [
    "pymetasploit3>=1.0",
    "fastapi>=0.110", "uvicorn>=0.29",
    "anthropic>=0.25", "groq>=0.9",
    "chromadb>=0.5",
]

[project.scripts]
spectrenet = "spectrenet.cli:main"
snet = "spectrenet.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["spectrenet*"]
