[package]
name    = "spectrenet-gui"
version = "0.1.0"
edition = "2021"

[lib]
name            = "spectrenet_gui_lib"
crate-type      = ["staticlib", "cdylib"]

[[bin]]
name = "spectrenet-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["shell-open"] }
tauri-plugin-shell  = "2"
tauri-plugin-http   = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json", "blocking"] }
tokio        = { version = "1", features = ["full"] }

[profile.release]
panic   = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
